--- a/SCDTR-PC/SCDTR-PC/SCDTR-PC.vcxproj
+++ b/SCDTR-PC/SCDTR-PC/SCDTR-PC.vcxproj
@@ -30,8 +30,8 @@
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="command.cpp" />
     <ClCompile Include="commands.cpp" />
+    <ClCompile Include="LastMinuteBuffer.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="program.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="ServerConnection.cpp" />
   </ItemGroup>
@@ -41,7 +41,8 @@
     <ClInclude Include="commands.h" />
     <ClInclude Include="convertion.h" />
     <ClInclude Include="input_exception.h" />
-    <ClInclude Include="program.h" />
+    <ClInclude Include="LastMinuteBuffer.h" />
+    <ClInclude Include="Server.h" />
     <ClInclude Include="ServerConnection.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -217,7 +218,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WIN32_WINNT=0x0601;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
